Fix overflow bug for large horizontal images

--- a/src/components/FrameMat/style.scss
+++ b/src/components/FrameMat/style.scss
@@ -19,6 +19,7 @@
 .art {
   position: absolute;
   background: black;
+  overflow: hidden;
 }
 
 .art img {
